@@ -1,5 +1,9 @@
 Changes with Apache 2.0.40
 
+  *) mod_ext_filter: Add the ability to enable or disable a filter via
+     an environment variable.  Add the ability to register a filter of
+     type other than AP_FTYPE_RESOURCE.  [Jeff Trawick]
+
   *) Restore the ability to specify host names on Listen directives.
      PR 11030.  [Jeff Trawick, David Shane Holden <dpejesh@yahoo.com>]
 
